--- a/assets/pages/katalog.html
+++ b/assets/pages/katalog.html
@@ -7,7 +7,7 @@
     <!-- Phosphor Icons -->
     <script src="https://unpkg.com/phosphor-icons"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="src/output.css" />
+    <link rel="stylesheet" href="../../src/output.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -63,7 +63,7 @@
         class="container mx-auto flex items-center justify-between px-4 lg:px-8"
       >
         <!-- Hamburger Menu (Mobile) -->
-        <button class="hamburger-menu">
+        <button id="hamburger-menu" class="hamburger-menu">
           <i class="ph-list"></i>
         </button>
 
@@ -79,7 +79,7 @@
 
         <!-- Links (Desktop) -->
         <div class="hidden lg:flex space-x-8 text-sm font-medium">
-          <a href="index.html" class="link_nav">Home</a>
+          <a href="../../index.html" class="link_nav">Home</a>
           <a href="#" class="link_nav">On Sale</a>
           <a href="#" class="link_nav">New Arrivals</a>
           <a href="#" class="link_nav">Brands</a>
@@ -127,18 +127,18 @@
     </nav>
 
     <!-- Sidebar Menu (Mobile) -->
-    <div class="mobile-menu -translate-x-full">
+    <div id="mobile-menu" class="mobile-menu -translate-x-full">
       <div class="flex justify-between items-center px-4 py-4 border-b">
         <div class="text-2xl font-bold" style="font-family: 'Raleway'">
           SHOP.CO
         </div>
-        <button class="close-menu text-2xl">
+        <button id="close-menu" class="close-menu text-2xl">
           <i class="ph-x"></i>
         </button>
       </div>
       <ul class="space-y-4 px-4 py-6">
         <li>
-          <a href="index.html" class="block text-gray-700 hover:text-black"
+          <a href="../../index.html" class="block text-gray-700 hover:text-black"
             >Home</a
           >
         </li>
@@ -670,6 +670,6 @@
 
     <!-- Footer -->
 
-    <script src="main.js"></script>
+    <script src="../../main.js"></script>
   </body>
 </html>
