--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         class="container mx-auto flex items-center justify-between px-4 lg:px-8"
       >
         <!-- Hamburger Menu (Mobile) -->
-        <button class="hamburger-menu">
+        <button id="hamburger-menu" class="hamburger-menu">
           <i class="ph-list"></i>
         </button>
 
@@ -56,7 +56,7 @@
         <!-- Links (Desktop) -->
         <div class="hidden lg:flex space-x-8 text-sm font-medium">
           <a href="index.html" class="link_nav">Home</a>
-          <a href="katalog.html" class="link_nav">On Sale</a>
+          <a href="./assets/pages/katalog.html" class="link_nav">On Sale</a>
           <a href="#" class="link_nav">New Arrivals</a>
           <a href="#" class="link_nav">Brands</a>
         </div>
@@ -102,12 +102,12 @@
       </div> -->
     </nav>
     <!-- Sidebar Menu (Mobile) -->
-    <div class="mobile-menu -translate-x-full">
+    <div id="mobile-menu" class="mobile-menu -translate-x-full">
       <div class="flex justify-between items-center px-4 py-4 border-b">
         <div class="text-2xl font-bold" style="font-family: 'Raleway'">
           SHOP.CO
         </div>
-        <button class="close-menu text-2xl">
+        <button id="close-menu" class="close-menu text-2xl">
           <i class="ph-x"></i>
         </button>
       </div>
