--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="fantasy">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -158,7 +158,10 @@
               class="hidden"
             />
             <label for="star5" title="text"
-              ><i class="ph-fill ph-star"></i
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <path
+                  d="M234.29,114.85l-45,38.83L203,211.75a16.4,16.4,0,0,1-24.5,17.82L128,198.49,77.47,229.57A16.4,16.4,0,0,1,53,211.75l13.76-58.07-45-38.83A16.46,16.46,0,0,1,31.08,86l59-4.76,22.76-55.08a16.36,16.36,0,0,1,30.27,0l22.75,55.08,59,4.76a16.46,16.46,0,0,1,9.37,28.86Z"
+                ></path></svg
             ></label>
             <input
               type="radio"
@@ -168,7 +171,10 @@
               class="hidden"
             />
             <label for="star4" title="text"
-              ><i class="ph-fill ph-star"></i
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <path
+                  d="M234.29,114.85l-45,38.83L203,211.75a16.4,16.4,0,0,1-24.5,17.82L128,198.49,77.47,229.57A16.4,16.4,0,0,1,53,211.75l13.76-58.07-45-38.83A16.46,16.46,0,0,1,31.08,86l59-4.76,22.76-55.08a16.36,16.36,0,0,1,30.27,0l22.75,55.08,59,4.76a16.46,16.46,0,0,1,9.37,28.86Z"
+                ></path></svg
             ></label>
             <input
               checked=""
@@ -179,7 +185,10 @@
               class="hidden"
             />
             <label for="star3" title="text"
-              ><i class="ph-fill ph-star"></i
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <path
+                  d="M234.29,114.85l-45,38.83L203,211.75a16.4,16.4,0,0,1-24.5,17.82L128,198.49,77.47,229.57A16.4,16.4,0,0,1,53,211.75l13.76-58.07-45-38.83A16.46,16.46,0,0,1,31.08,86l59-4.76,22.76-55.08a16.36,16.36,0,0,1,30.27,0l22.75,55.08,59,4.76a16.46,16.46,0,0,1,9.37,28.86Z"
+                ></path></svg
             ></label>
             <input
               type="radio"
@@ -189,7 +198,10 @@
               class="hidden"
             />
             <label for="star2" title="text"
-              ><i class="ph-fill ph-star"></i
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <path
+                  d="M234.29,114.85l-45,38.83L203,211.75a16.4,16.4,0,0,1-24.5,17.82L128,198.49,77.47,229.57A16.4,16.4,0,0,1,53,211.75l13.76-58.07-45-38.83A16.46,16.46,0,0,1,31.08,86l59-4.76,22.76-55.08a16.36,16.36,0,0,1,30.27,0l22.75,55.08,59,4.76a16.46,16.46,0,0,1,9.37,28.86Z"
+                ></path></svg
             ></label>
             <input
               type="radio"
@@ -199,8 +211,103 @@
               class="hidden"
             />
             <label for="star1" title="text"
-              ><i class="ph-fill ph-star"></i
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <path
+                  d="M234.29,114.85l-45,38.83L203,211.75a16.4,16.4,0,0,1-24.5,17.82L128,198.49,77.47,229.57A16.4,16.4,0,0,1,53,211.75l13.76-58.07-45-38.83A16.46,16.46,0,0,1,31.08,86l59-4.76,22.76-55.08a16.36,16.36,0,0,1,30.27,0l22.75,55.08,59,4.76a16.46,16.46,0,0,1,9.37,28.86Z"
+                ></path></svg
             ></label>
+          </div>
+          <div class="price">
+            <p class="normal-price">$260</p>
+            <p class="discount-price">$300</p>
+            <p class="discount">-40%</p>
+          </div>
+          <p class="desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+            voluptatem! Lorem ipsum dolor sit amet.
+          </p>
+          <br>
+          <hr>
+          <div class="w-full mx-auto bg-white rounded-lg mt-4">
+            <!-- Color Selection -->
+            <div>
+              <h2 class="text-lg font-semibold mb-2">Select Colors</h2>
+              <div class="flex space-x-4 mb-4">
+                <div
+                  class="w-8 h-8 rounded-full border border-gray-300 bg-[#5b4a33] flex items-center justify-center"
+                >
+                  <svg
+                    class="w-4 h-4 text-white"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <div class="w-8 h-8 rounded-full bg-[#36544e]"></div>
+                <div class="w-8 h-8 rounded-full bg-[#2b2d48]"></div>
+              </div>
+            </div>
+            <!-- Size Selection -->
+            <div>
+              <h2 class="font-semibold mb-2">Choose Size</h2>
+              <div class="flex space-x-4 mb-4">
+                <button
+                  class="text-sm px-3 py-1 rounded-full bg-gray-100 text-gray-700"
+                >
+                  Small
+                </button>
+                <button
+                  class="text-sm px-3 py-1 rounded-full bg-gray-100 text-gray-700"
+                >
+                  Medium
+                </button>
+                <button
+                  class="text-sm px-3 py-1 rounded-full bg-black text-white"
+                >
+                  Large
+                </button>
+                <button
+                  class="text-sm px-3 py-1 rounded-full bg-gray-100 text-gray-700"
+                >
+                  X-Large
+                </button>
+              </div>
+            </div>
+
+            <!-- Quantity Selection -->
+            <div class="flex items-center justify-between">
+              <!-- Quantity Selection -->
+              <div class="flex items-center space-x-2">
+                <button
+                  class="bg-gray-200 rounded-full w-10 h-10 flex items-center justify-center"
+                >
+                  <i class="ph-minus text-xl"></i>
+                </button>
+                <span class="mx-2 text-lg font-semibold">1</span>
+                <button
+                  class="bg-gray-200 rounded-full w-10 h-10 flex items-center justify-center"
+                >
+                  <i class="ph-plus text-xl"></i>
+                </button>
+              </div>
+
+              <!-- Add to Cart Button -->
+              <div class="flex-grow ml-4">
+                <button class="w-full py-3 bg-black text-white rounded-full">
+                  Add to Cart
+                </button>
+              </div>
+            </div>
+
+            <!-- Add to Cart Button -->
           </div>
         </div>
       </div>
