--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="fantasy" >
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,7 @@
         class="container mx-auto flex items-center justify-between px-4 lg:px-8"
       >
         <!-- Hamburger Menu (Mobile) -->
-        <button id="hamburger-menu" class="hamburger-menu">
+        <button id="hamburger-menu-index" class="hamburger-menu">
           <i class="ph-list"></i>
         </button>
 
@@ -102,12 +102,12 @@
       </div> -->
     </nav>
     <!-- Sidebar Menu (Mobile) -->
-    <div id="mobile-menu" class="mobile-menu -translate-x-full">
+    <div id="mobile-menu-index" class="mobile-menu -translate-x-full">
       <div class="flex justify-between items-center px-4 py-4 border-b">
         <div class="text-2xl font-bold" style="font-family: 'Raleway'">
           SHOP.CO
         </div>
-        <button id="close-menu" class="close-menu text-2xl">
+        <button id="close-menu-index" class="close-menu text-2xl">
           <i class="ph-x"></i>
         </button>
       </div>
@@ -891,6 +891,7 @@
       </div>
     </footer>
 
+    
     <script src="main.js"></script>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
   </body>
