--- a/tes.html
+++ b/tes.html
@@ -3,215 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar with Sidebar</title>
+    <title>Product Section</title>
     <script src="https://unpkg.com/phosphor-icons"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      /* From Uiverse.io by amikambs */
-      .rating:not(:checked) > input {
-        position: absolute;
-        appearance: none;
-      }
-
-      .rating:not(:checked) > label {
-        float: right;
-        cursor: pointer;
-        font-size: 30px;
-        fill: #666;
-      }
-
-      .rating:not(:checked) > label > svg {
-        fill: #666; /* Set default color for SVG */
-        transition: fill 0.3s ease; /* Add a transition effect */
-      }
-
-      .rating > input:checked + label:hover,
-      .rating > input:checked + label:hover ~ label,
-      .rating > input:checked ~ label:hover,
-      .rating > input:checked ~ label:hover ~ label,
-      .rating > label:hover ~ input:checked ~ label {
-        fill: #e58e09;
-      }
-
-      .rating:not(:checked) > label:hover,
-      .rating:not(:checked) > label:hover ~ label {
-        fill: #ff9e0b;
-      }
-
-      .rating > input:checked ~ label > svg {
-        fill: #ffa723; /* Set color for selected stars */
-      }
-    </style>
   </head>
-  <body class="font-sans antialiased">
-    <!-- Promo Bar -->
-    <div class="bg-black text-white text-sm py-2 flex justify-center relative">
-      <span
-        >Sign up and get 20% off your first order.
-        <a href="#" class="underline">Sign Up Now</a></span
-      >
-    </div>
-
-    <!-- Navbar -->
-    <nav class="bg-white shadow-sm py-4">
-      <div
-        class="container mx-auto flex items-center justify-between px-4 lg:px-8"
-      >
-        <!-- Hamburger Menu (Mobile) -->
-        <button
-          id="hamburger"
-          class="block lg:hidden text-2xl text-gray-700 mr-4"
-        >
-          <i class="ph-list"></i>
-        </button>
-
-        <!-- Logo -->
-        <div class="text-2xl font-bold flex-grow lg:flex-grow-0">
-          <a href="#" class="text-black">SHOP.CO</a>
-        </div>
-
-        <!-- Links (Desktop) -->
-        <div class="hidden lg:flex space-x-8 text-sm font-medium">
-          <a href="#" class="text-gray-700 hover:text-black">Shop</a>
-          <a href="#" class="text-gray-700 hover:text-black">On Sale</a>
-          <a href="#" class="text-gray-700 hover:text-black">New Arrivals</a>
-          <a href="#" class="text-gray-700 hover:text-black">Brands</a>
-        </div>
-
-        <!-- Search bar (Desktop) -->
-        <div class="hidden lg:flex flex-grow max-w-lg items-center relative">
-          <input
-            type="text"
-            class="w-full py-2 pl-10 pr-4 rounded-full bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-300"
-            placeholder="Search for products..."
-          />
-          <i class="ph-magnifying-glass absolute left-3 text-gray-500"></i>
-        </div>
-
-        <!-- Icons (Desktop & Mobile) -->
-        <div class="flex space-x-4 items-center">
-          <a
-            id="mobile-search-btn"
-            href="#"
-            class="text-gray-700 text-xl hover:text-black lg:hidden"
+  <body class="bg-gray-100 p-6">
+    <div class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md">
+      <!-- Color Selection -->
+      <div>
+        <h2 class="text-lg font-semibold mb-2">Select Colors</h2>
+        <div class="flex space-x-4 mb-4">
+          <div
+            class="w-8 h-8 rounded-full border border-gray-300 bg-[#5b4a33] flex items-center justify-center"
           >
-            <i class="ph-magnifying-glass"></i>
-          </a>
-          <a href="#" class="text-gray-700 text-xl hover:text-black">
-            <i class="ph-shopping-cart"></i>
-          </a>
-          <a href="#" class="text-gray-700 text-xl hover:text-black">
-            <i class="ph-user-circle"></i>
-          </a>
+            <svg
+              class="w-4 h-4 text-white"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M5 13l4 4L19 7"
+              />
+            </svg>
+          </div>
+          <div class="w-8 h-8 rounded-full bg-[#36544e]"></div>
+          <div class="w-8 h-8 rounded-full bg-[#2b2d48]"></div>
         </div>
       </div>
-    </nav>
 
-    <!-- Sidebar Menu (Mobile) -->
-    <div
-      id="mobile-menu"
-      class="fixed inset-y-0 left-0 w-[250px] bg-white shadow-lg transition-transform duration-300 -translate-x-full lg:hidden"
-    >
-      <div class="flex justify-between items-center px-4 py-4 border-b">
-        <div class="text-2xl font-bold">SHOP.CO</div>
-        <button id="close-menu" class="text-2xl">
-          <i class="ph-x"></i>
-        </button>
+      <!-- Size Selection -->
+      <div>
+        <h2 class="text-lg font-semibold mb-2">Choose Size</h2>
+        <div class="flex space-x-4 mb-4">
+          <button class="px-4 py-2 rounded-full bg-gray-100 text-gray-700">
+            Small
+          </button>
+          <button class="px-4 py-2 rounded-full bg-gray-100 text-gray-700">
+            Medium
+          </button>
+          <button class="px-4 py-2 rounded-full bg-black text-white">
+            Large
+          </button>
+          <button class="px-4 py-2 rounded-full bg-gray-100 text-gray-700">
+            X-Large
+          </button>
+        </div>
       </div>
-      <ul class="space-y-4 px-4 py-6">
-        <li>
-          <a href="#" class="block text-gray-700 hover:text-black">Shop</a>
-        </li>
-        <li>
-          <a href="#" class="block text-gray-700 hover:text-black">On Sale</a>
-        </li>
-        <li>
-          <a href="#" class="block text-gray-700 hover:text-black"
-            >New Arrivals</a
-          >
-        </li>
-        <li>
-          <a href="#" class="block text-gray-700 hover:text-black">Brands</a>
-        </li>
-      </ul>
-    </div>
 
-    <!-- Mobile Search Input -->
-    <div
-      id="mobile-search"
-      class="fixed inset-x-0 top-10 bg-white px-4 py-3 flex items-center transition-transform duration-300 -z-10 search-hidden lg:hidden"
-    >
-      <input
-        type="text"
-        class="w-full py-2 px-4 rounded-full bg-gray-100 focus:outline-none"
-        placeholder="Search for products..."
-      />
-    </div>
+      <!-- Add to Cart & Quantity Selection -->
+      <div class="flex items-center justify-between">
+        <!-- Quantity Selection -->
+        <div class="flex items-center space-x-2">
+          <button class="bg-gray-200 rounded-full p-2">
+            <i class="ph-minus text-xl"></i>
+          </button>
+          <span class="mx-2 text-lg font-semibold">1</span>
+          <button class="bg-gray-200 rounded-full p-2">
+            <i class="ph-plus text-xl"></i>
+          </button>
+        </div>
 
-    /* From Uiverse.io by amikambs */
-    <div class="rating">
-      <input type="radio" id="star5" name="rate" value="5" />
-      <label for="star5" title="text"
-        ><svg
-          viewBox="0 0 576 512"
-          height="1em"
-          xmlns="http://www.w3.org/2000/svg"
-          class="star-solid"
-        >
-          <path
-            d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-          ></path></svg
-      ></label>
-      <input type="radio" id="star4" name="rate" value="4" />
-      <label for="star4" title="text"
-        ><svg
-          viewBox="0 0 576 512"
-          height="1em"
-          xmlns="http://www.w3.org/2000/svg"
-          class="star-solid"
-        >
-          <path
-            d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-          ></path></svg
-      ></label>
-      <input checked="" type="radio" id="star3" name="rate" value="3" />
-      <label for="star3" title="text"
-        ><svg
-          viewBox="0 0 576 512"
-          height="1em"
-          xmlns="http://www.w3.org/2000/svg"
-          class="star-solid"
-        >
-          <path
-            d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-          ></path></svg
-      ></label>
-      <input type="radio" id="star2" name="rate" value="2" />
-      <label for="star2" title="text"
-        ><svg
-          viewBox="0 0 576 512"
-          height="1em"
-          xmlns="http://www.w3.org/2000/svg"
-          class="star-solid"
-        >
-          <path
-            d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-          ></path></svg
-      ></label>
-      <input type="radio" id="star1" name="rate" value="1" />
-      <label for="star1" title="text"
-        ><svg
-          viewBox="0 0 576 512"
-          height="1em"
-          xmlns="http://www.w3.org/2000/svg"
-          class="star-solid"
-        >
-          <path
-            d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
-          ></path></svg
-      ></label>
+        <!-- Add to Cart Button -->
+        <div class="flex-grow ml-4">
+          <button class="w-full py-3 bg-black text-white rounded-full">
+            Add to Cart
+          </button>
+        </div>
+      </div>
     </div>
-
-    <script></script>
   </body>
 </html>
