--- a/assets/pages/katalog.html
+++ b/assets/pages/katalog.html
@@ -460,13 +460,13 @@
         </div>
 
         <!-- Product Grid -->
-        <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+        <div class="products_catalog grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
           <!-- Product Card -->
           <div class="card_container" data-item="pria" data-aos="zoom-in">
             <!-- Image with hover effect -->
             <div class="overflow-hidden">
               <img
-                src="assets/img/products card/male-1.jpg"
+                src="./../assets/img/products card/male-1.jpg"
                 alt="Product Image"
                 class="card_img"
               />
