--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <li data-item="nenek" class="product_item">NENEK</li>
       </ul>
       <div class="product-card">
-        <div class="card_container" data-item="pria" data-aos="zoom-in">
+        <div class="card_container" data-item="pria" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -432,7 +432,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="pria" data-aos="zoom-in">
+        <div class="card_container" data-item="pria" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -463,7 +463,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="pria" data-aos="zoom-in">
+        <div class="card_container" data-item="pria" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -494,7 +494,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="wanita" data-aos="zoom-in">
+        <div class="card_container" data-item="wanita" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -525,7 +525,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="wanita" data-aos="zoom-in">
+        <div class="card_container" data-item="wanita" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -556,7 +556,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="wanita" data-aos="zoom-in">
+        <div class="card_container" data-item="wanita" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -587,7 +587,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="anak" data-aos="zoom-in">
+        <div class="card_container" data-item="anak" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -618,7 +618,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="anak" data-aos="zoom-in">
+        <div class="card_container" data-item="anak" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -649,7 +649,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="anak" data-aos="zoom-in">
+        <div class="card_container" data-item="anak" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -680,7 +680,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="nenek" data-aos="zoom-in">
+        <div class="card_container" data-item="nenek" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -711,7 +711,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="nenek" data-aos="zoom-in">
+        <div class="card_container" data-item="nenek" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
@@ -742,7 +742,7 @@
             <button class="card_btn">BELI</button>
           </div>
         </div>
-        <div class="card_container" data-item="nenek" data-aos="zoom-in">
+        <div class="card_container" data-item="nenek" >
           <!-- Image with hover effect -->
           <div class="overflow-hidden">
             <img
