--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           >
             <i class="ph-magnifying-glass"></i>
           </a>
-          <a href="#" class="text-gray-700 text-xl hover:text-black">
+          <a href="./assets/pages/checkout.html" class="text-gray-700 text-xl hover:text-black">
             <i class="ph-shopping-cart"></i>
           </a>
           <a href="#" class="text-gray-700 text-xl hover:text-black">
