--- a/assets/pages/katalog.html
+++ b/assets/pages/katalog.html
@@ -104,7 +104,7 @@
           >
             <i class="ph-magnifying-glass"></i>
           </a>
-          <a href="#" class="text-gray-700 text-xl hover:text-black">
+          <a href="./checkout.html" class="text-gray-700 text-xl hover:text-black">
             <i class="ph-shopping-cart"></i>
           </a>
           <a href="#" class="text-gray-700 text-xl hover:text-black">
